Fix layout issues and apply hover styles to buttons

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -10,6 +10,7 @@
     --bg-calc: hsl(0, 0%, 100%);
     --bg-calc-btn: hsl(183, 100%, 15%);
     --bg-input: hsl(189, 41%, 97%);
+    --bg-input-active: hsl(172, 67%, 45%);
     --bg-body: hsl(185, 41%, 84%);
     --bg-calc-total: hsl(183, 100%, 15%);
 
