--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -9,6 +9,7 @@
     font-size: toRem(24px);
     padding: 0.625em 0; // 15px/24px, .calc__btn font-size of 24px
     border-radius: 8px;
+    transition: background-color 0.3s, color 0.3s;
 
     &--large {
         font-size: toRem(20px);
@@ -17,5 +18,10 @@
         width: 100%;
         margin-top: 2em; // 40px/20px, .calc__btn--large font-size of 20px
         color: hsla(183, 100%, 15%, .4);
+    }
+
+    &:not(&--large):hover {
+        background-color: hsl(172, 67%, 45%, .6);
+        color: var(--input-color);
     }
 }
